[gd_scene format=3 uid="uid://c1xy4lkq206i0"]

[ext_resource type="Script" uid="uid://ccdqq5mspaiqg" path="res://game/system/anatomy/anatomy_ui.gd" id="1_kt6gv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5v1lm"]
bg_color = Color(0.29060543, 0.2906055, 0.29060534, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kt6gv"]
bg_color = Color(0.011764706, 0.011764706, 0.011764706, 0.40392157)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2wssl"]
bg_color = Color(0.37446532, 0.021501854, 0.06134542, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_kt6gv"]
thickness = 4
vertical = true

[node name="AnatomyUI" type="Control" unique_id=1732165878]
custom_minimum_size = Vector2(200, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 60.0
script = ExtResource("1_kt6gv")

[node name="Panel" type="Panel" parent="." unique_id=273158366]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5v1lm")

[node name="MarginContainer" type="MarginContainer" parent="Panel" unique_id=829839520]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer" unique_id=727552029]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/HBoxContainer" unique_id=750523025]
layout_mode = 2
theme_override_constants/margin_top = 2

[node name="Info" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/MarginContainer" unique_id=826808662]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_constants/separation = 6

[node name="LabelName" type="Label" parent="Panel/MarginContainer/HBoxContainer/MarginContainer/Info" unique_id=1656866749]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Body"
horizontal_alignment = 1

[node name="HpBar" type="ProgressBar" parent="Panel/MarginContainer/HBoxContainer/MarginContainer/Info" unique_id=1828563697]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/background = SubResource("StyleBoxFlat_kt6gv")
theme_override_styles/fill = SubResource("StyleBoxFlat_2wssl")
value = 100.0

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainer/HBoxContainer" unique_id=1919382996]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_kt6gv")

[node name="Stats" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer" unique_id=2136777582]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="LabelState" type="Label" parent="Panel/MarginContainer/HBoxContainer/Stats" unique_id=1878072070]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = " HEALTHY"

[node name="LabelBlock" type="Label" parent="Panel/MarginContainer/HBoxContainer/Stats" unique_id=1352774914]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = " Resist 4 DMG"

[node name="LabelEffect" type="Label" parent="Panel/MarginContainer/HBoxContainer/Stats" unique_id=418677610]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = " + 4 DMG per Attack"
